chore: add trait_duplication_in_bounds lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -197,6 +197,7 @@ str_to_string = "warn"
 string_to_string = "warn"
 suspicious_xor_used_as_pow = "warn"
 todo = "warn"
+trait_duplication_in_bounds = "warn"
 try_err = "warn"
 unimplemented = "warn"
 unnecessary_self_imports = "warn"
