--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,12 +174,15 @@ disallowed_methods = "warn"
 disallowed_types = "warn"
 dbg_macro = "warn"
 deref_by_slicing = "warn"
+empty_drop = "warn"
+fallible_impl_from = "warn"
 float_cmp_const = "warn"
 fn_to_numeric_cast_any = "warn"
 get_unwrap = "warn"
 integer_division = "warn"
 lossy_float_literal = "warn"
 map_err_ignore = "warn"
+missing_const_for_fn = "warn"
 multiple_inherent_impl = "warn"
 mutex_atomic = "warn"
 partial_pub_fields = "warn"
@@ -195,8 +198,10 @@ self_named_module_files = "warn"
 semicolon_inside_block = "warn"
 str_to_string = "warn"
 string_to_string = "warn"
+suspicious_operation_groupings = "warn"
 suspicious_xor_used_as_pow = "warn"
 todo = "warn"
+trailing_empty_array = "warn"
 trait_duplication_in_bounds = "warn"
 try_err = "warn"
 unimplemented = "warn"
@@ -205,6 +210,7 @@ unneeded_field_pattern = "warn"
 unreachable = "warn"
 unseparated_literal_suffix = "warn"
 use_debug = "warn"
+use_self = "warn"
 verbose_file_reads = "warn"
 # allow
 missing_panics_doc = "allow"
