--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.localesPaths": "apps/client/i18n/locales",
+  "i18n-ally.localesPaths": ["packages/client/i18n/locales"],
   "rust-analyzer.check.command": "clippy",
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component", "server"]
