--- a/packages/client/composables/Cargo.toml
+++ b/packages/client/composables/Cargo.toml
@@ -16,6 +16,7 @@ client_i18n.workspace = true
 client_macros.workspace = true
 client_utils.workspace = true
 exports = { workspace = true, features = ["client"] }
+utils.workspace = true
 futures.workspace = true
 leptos-use.workspace = true
 log.workspace = true
