--- a/packages/client/pages/Cargo.toml
+++ b/packages/client/pages/Cargo.toml
@@ -20,6 +20,7 @@ client_router.workspace = true
 client_stores.workspace = true
 client_utils.workspace = true
 exports = { workspace = true, features = ["client"] }
+utils.workspace = true
 leptos.workspace = true
 leptos_router.workspace = true
 pct-str.workspace = true
