refactor: clean up client composables

--- a/packages/exports/Cargo.toml
+++ b/packages/exports/Cargo.toml
@@ -17,6 +17,7 @@ educe.workspace = true
 getset.workspace = true
 leptos.workspace = true
 leptos_i18n = { workspace = true, optional = true }
+leptos-use = { workspace = true, optional = true }
 log.workspace = true
 num.workspace = true
 serde.workspace = true
@@ -24,5 +25,5 @@ time.workspace = true
 unocss-classes = { workspace = true, optional = true }
 
 [features]
-client = ["dep:leptos_i18n", "dep:unocss-classes"]
+client = ["dep:leptos_i18n", "dep:leptos-use", "dep:unocss-classes"]
 server = []
