--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,8 +71,9 @@ serde_json = "1.0.108"
 thiserror = "1.0.51"
 time = { version = "0.3.31", features = ["macros", "formatting", "parsing"] }
 unocss-classes = "2.0.0"
-wasm-bindgen = "0.2.89"
-web-sys = { version = "0.3.66", features = [
+wasm-bindgen = "0.2.90"
+wasm-bindgen-futures = "0.4.40"
+web-sys = { version = "0.3.67", features = [
   "CssStyleDeclaration",
   "DomRect",
   "DomTokenList",
