--- a/packages/client/app/Cargo.toml
+++ b/packages/client/app/Cargo.toml
@@ -27,6 +27,9 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos-use.workspace = true
+wasm-bindgen.workspace = true
+wasm-bindgen-futures.workspace = true
+web-sys.workspace = true
 
 [features]
 pwa = []
