--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "skipLibCheck": true,
     "sourceMap": false,
     "strict": true,
-    "target": "ESNext"
+    "target": "ESNext",
+    "types": ["vite/client", "vite-plugin-pwa/client"]
   },
   "include": ["*.config.ts", "apps/**/*.ts", "packages/**/*.ts", "e2e/**/*.ts"]
 }
