--- a/packages/client/composables/Cargo.toml
+++ b/packages/client/composables/Cargo.toml
@@ -22,6 +22,7 @@ leptos-use.workspace = true
 log.workspace = true
 paste.workspace = true
 wasm-bindgen.workspace = true
+web-sys.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_log = { version = "1.0.0", features = ["color"] }
