--- a/packages/client/components/Cargo.toml
+++ b/packages/client/components/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-client_composables.workspace = true
+client_hooks.workspace = true
 client_router.workspace = true
 exports = { workspace = true, features = ["client"] }
 leptos.workspace = true
