--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["packages/client/i18n/locales"],
-  "rust-analyzer.check.command": "clippy",
+  "rust-analyzer.check.overrideCommand": ["just", "_rust-analyzer-check"],
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component", "server"]
   },
