--- a/packages/client/hooks/Cargo.toml
+++ b/packages/client/hooks/Cargo.toml
@@ -15,8 +15,7 @@ path = "lib.rs"
 client_i18n.workspace = true
 client_macros.workspace = true
 client_utils.workspace = true
-exports = { workspace = true, features = ["client"] }
-utils.workspace = true
+common.workspace = true
 futures.workspace = true
 leptos-use.workspace = true
 log.workspace = true
