--- a/packages/client/stores/Cargo.toml
+++ b/packages/client/stores/Cargo.toml
@@ -13,5 +13,5 @@ path = "lib.rs"
 
 [dependencies]
 client_utils.workspace = true
-exports = { workspace = true, features = ["client"] }
+common.workspace = true
 leptos-use.workspace = true
