--- a/packages/common/macros/proc/Cargo.toml
+++ b/packages/common/macros/proc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "proc_macros"
+name = "common_proc_macros"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
