--- a/packages/server/Cargo.toml
+++ b/packages/server/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-exports = { workspace = true, features = ["server"] }
+common.workspace = true
 leptos.workspace = true
 log.workspace = true
 reqwest = { version = "0.11.23", features = ["json"] }
