--- a/packages/client/components/Cargo.toml
+++ b/packages/client/components/Cargo.toml
@@ -14,6 +14,7 @@ path = "lib.rs"
 [dependencies]
 client_hooks.workspace = true
 client_router.workspace = true
+client_utils.workspace = true
 common.workspace = true
 leptos.workspace = true
 leptos_animated_for.workspace = true
