refactor: use modern module syntax

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -188,6 +188,7 @@ integer_division = "warn"
 lossy_float_literal = "warn"
 map_err_ignore = "warn"
 missing_const_for_fn = "warn"
+mod_module_files = "warn"
 multiple_inherent_impl = "warn"
 mutex_atomic = "warn"
 partial_pub_fields = "warn"
@@ -199,7 +200,6 @@ ref_patterns = "warn"
 redundant_clone = "warn"
 redundant_type_annotations = "warn"
 rest_pat_in_fully_bound_structs = "warn"
-self_named_module_files = "warn"
 semicolon_inside_block = "warn"
 str_to_string = "warn"
 string_to_string = "warn"
