--- a/packages/client/components/Cargo.toml
+++ b/packages/client/components/Cargo.toml
@@ -17,7 +17,5 @@ client_router.workspace = true
 client_utils.workspace = true
 common.workspace = true
 leptos.workspace = true
-leptos_animated_for.workspace = true
+leptos_animated_for = "0.4.1"
 leptos_icons = "0.3.0"
-wasm-bindgen.workspace = true
-web-sys.workspace = true
