--- a/packages/server/Cargo.toml
+++ b/packages/server/Cargo.toml
@@ -14,15 +14,14 @@ path = "lib.rs"
 [dependencies]
 common.workspace = true
 leptos.workspace = true
-log.workspace = true
-reqwest = { version = "0.11.24", features = ["json"] }
 serde.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-axum.workspace = true
-leptos_axum.workspace = true
-leptos_integration_utils.workspace = true
-tracing-subscriber.workspace = true
 tokio.workspace = true
-tower.workspace = true
-tower-http.workspace = true
+axum = "0.7.4"
+leptos_axum = "0.6.5"
+leptos_integration_utils = "0.6.5"
+reqwest = { version = "0.11.24", features = ["json"] }
+tower = "0.4.13"
+tower-http = { version = "0.5.1", features = ["fs", "trace"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
