--- a/packages/client/components/Cargo.toml
+++ b/packages/client/components/Cargo.toml
@@ -13,6 +13,7 @@ path = "lib.rs"
 
 [dependencies]
 client_hooks.workspace = true
+client_macros.workspace = true
 client_router.workspace = true
 client_utils.workspace = true
 common.workspace = true
