--- a/packages/client/macros/proc/Cargo.toml
+++ b/packages/client/macros/proc/Cargo.toml
@@ -12,6 +12,7 @@ workspace = true
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
+xxhash-rust = { version = "0.8.8", features = ["xxh3"] }
 
 [lib]
 path = "lib.rs"
