--- a/packages/client/macros/proc/Cargo.toml
+++ b/packages/client/macros/proc/Cargo.toml
@@ -9,10 +9,10 @@ publish = false
 workspace = true
 
 [dependencies]
+ahash = "0.8.7"
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
-xxhash-rust = { version = "0.8.8", features = ["xxh3"] }
 
 [lib]
 path = "lib.rs"
