--- a/.cargo/config.example-ubuntu-mold.toml
+++ b/.cargo/config.example-ubuntu-mold.toml
@@ -13,3 +13,6 @@ codegen-backend = "cranelift"
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/mold"]
+
+[target.wasm32-unknown-unknown]
+runner = 'wasm-bindgen-test-runner'
