--- a/.cargo/config.example.toml
+++ b/.cargo/config.example.toml
@@ -9,3 +9,6 @@ codegen-backend = true
 
 [profile.server-dev]
 codegen-backend = "cranelift"
+
+[target.wasm32-unknown-unknown]
+runner = 'wasm-bindgen-test-runner'
