--- a/packages/client/src/components/Cargo.toml
+++ b/packages/client/src/components/Cargo.toml
@@ -20,3 +20,8 @@ common.workspace = true
 leptos.workspace = true
 leptos_animated_for = "0.4.1"
 leptos_icons = "0.3.0"
+
+[dev-dependencies]
+insta.workspace = true
+pretty_assertions.workspace = true
+wasm-bindgen-test.workspace = true
