--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup
       - name: Tests
-        run: just test-ci
+        run: just test
 
   e2e:
     name: E2E
