--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
   "packages/common/macros",
   "packages/common/macros/proc",
   "packages/common/utils",
+  "packages/dev",
   "packages/server",
 ]
 
@@ -43,6 +44,7 @@ common.path = "packages/common"
 common_macros.path = "packages/common/macros"
 common_utils.path = "packages/common/utils"
 common_vendor.path = "packages/common/vendor"
+dev.path = "packages/dev"
 server.path = "packages/server"
 cfg-if = "1.0.0"
 leptos = { version = "0.6.5", features = ["nightly"] }
@@ -62,8 +64,6 @@ proc-macro2 = "1.0.78"
 quote = "1.0.35"
 syn = { version = "2.0.48", features = ["full"] }
 # dev
-insta = "1.34.0"
-pretty_assertions = "1.4.0"
 wasm-bindgen-test = "0.3.41"
 
 [profile.dev]
