--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@happy-dom/global-registrator": "^13.3.8",
     "@playwright/test": "^1.41.2",
     "@types/node": "^20.11.16",
     "@types/nprogress": "^0.2.3",
     "@types/uuid": "^9.0.8",
-    "jsdom": "^24.0.0",
+    "happy-dom": "^13.3.8",
     "lightningcss": "^1.23.0",
     "prettier": "^3.2.5",
     "prettier-plugin-toml": "^2.0.1",
