--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ common_vendor.path = "packages/common/vendor"
 dev.path = "packages/dev"
 server.path = "packages/server"
 cfg-if = "1.0.0"
+console_log = { version = "1.0.0", features = ["color"] }
 leptos = { version = "0.6.5", features = ["nightly"] }
 leptos_i18n = { version = "0.3.0-rc", features = [
   "nightly",
@@ -55,6 +56,7 @@ leptos_i18n = { version = "0.3.0-rc", features = [
   "interpolate_display",
   "yaml_files",
 ], default-features = false }
+leptos_meta = { version = "0.6.5", features = ["nightly"] }
 leptos_router = { version = "0.6.5", features = ["nightly"] }
 serde = { version = "1.0.196", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
