--- a/packages/client/app/Cargo.toml
+++ b/packages/client/app/Cargo.toml
@@ -24,5 +24,9 @@ client_utils.workspace = true
 common.workspace = true
 leptos.workspace = true
 
+[dev-dependencies]
+dev.workspace = true
+wasm-bindgen-test.workspace = true
+
 [features]
 pwa = []
