--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ server.path = "packages/server"
 cfg-if = "1.0.0"
 console_log = { version = "1.0.0", features = ["color"] }
 leptos = { version = "0.6.5", features = ["nightly"] }
-leptos_i18n = { version = "0.3.0-rc", features = [
+leptos_i18n = { version = "0.3.2", features = [
   "nightly",
   "serde",
   "cookie",
@@ -64,7 +64,7 @@ wasm-bindgen = "0.2.91"
 # proc macros
 proc-macro2 = "1.0.78"
 quote = "1.0.35"
-syn = { version = "2.0.48", features = ["full"] }
+syn = { version = "2.0.49", features = ["full"] }
 # dev
 wasm-bindgen-test = "0.3.41"
 
