--- a/packages/client/macros/proc/Cargo.toml
+++ b/packages/client/macros/proc/Cargo.toml
@@ -14,7 +14,7 @@ proc-macro2.workspace = true
 quote.workspace = true
 regex = "1.10.3"
 syn.workspace = true
-walkdir = "2.4.0"
+wax = "0.6.0"
 
 [lib]
 path = "lib.rs"
