--- a/packages/client/pages/Cargo.toml
+++ b/packages/client/pages/Cargo.toml
@@ -16,6 +16,7 @@ client_components.workspace = true
 client_hooks.workspace = true
 client_env.workspace = true
 client_i18n.workspace = true
+client_macros.workspace = true
 client_router.workspace = true
 client_stores.workspace = true
 client_utils.workspace = true
