--- a/package.json
+++ b/package.json
@@ -14,34 +14,15 @@
     "e2e",
     "packages/**"
   ],
-  "dependencies": {
-    "@unocss/reset": "^0.58.5",
-    "nprogress": "^0.2.0",
-    "workbox-core": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-window": "^7.0.0"
-  },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@happy-dom/global-registrator": "^13.3.8",
     "@playwright/test": "^1.41.2",
     "@types/node": "^20.11.19",
-    "@types/nprogress": "^0.2.3",
-    "@types/uuid": "^9.0.8",
     "happy-dom": "^13.3.8",
-    "lightningcss": "^1.23.0",
     "prettier": "^3.2.5",
     "prettier-plugin-toml": "^2.0.1",
-    "sass": "^1.71.0",
-    "typescript": "^5.3.3",
-    "unocss": "^0.58.5",
-    "unocss-preset-better-nested-colors": "^1.0.0",
-    "uuid": "^9.0.1",
-    "vite": "^5.1.3",
-    "vite-plugin-pwa": "^0.19.0",
-    "vite-plugin-webfont-dl": "^3.9.1"
+    "typescript": "^5.3.3"
   },
   "prettier": {
     "plugins": [
