--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -51,17 +51,17 @@ jobs:
       - name: Tests
         run: just test
 
-  # e2e:
-  #   name: E2E
-  #   needs: setup
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: ./.github/actions/setup
-  #     - name: Build
-  #       run: just build
-  #     - name: E2E
-  #       run: just e2e-release
+  e2e:
+    name: E2E
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup
+      - name: Build
+        run: just build
+      - name: E2E
+        run: just e2e-release
 
   audit:
     name: Dependency audit
