--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -63,7 +63,7 @@ jobs:
 
   build:
     name: Build
-    needs: check
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
