--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,3 +183,5 @@ must_use_candidate = "allow"
 similar_names = "allow"
 too_many_lines = "allow"
 unsafe_derive_deserialize = "allow"
+# FIXME: Leptos' `#[component]` macro seems to trigger this
+empty_docs = "allow"
