--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -4,25 +4,7 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v3
-
-    - name: Cargo cache setup
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/
-          ~/.rustup/toolchains/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: ${{ runner.os }}-cargo-
-
-    - name: pnpm setup
-      uses: pnpm/action-setup@v2
-
-    - name: Node setup
-      uses: actions/setup-node@v3
-      with:
-        node-version-file: ".nvmrc"
-        cache: pnpm
+    - uses: ./.github/actions/cache
 
     - name: Just setup
       shell: bash
