ci: try fixing e2e

--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -88,6 +88,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/cache
+      - name: Setup Playwright
+        run: npx playwright install --with-deps
       - name: E2E
         run: just e2e
 
