--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ dev.path = "packages/dev"
 server.path = "packages/server"
 cfg-if = "1.0.0"
 console_log = { version = "1.0.0", features = ["color"] }
-leptos = { version = "0.6.7", features = ["nightly"] }
+leptos = { version = "0.6.8", features = ["nightly"] }
 leptos_i18n = { version = "0.3.3", features = [
   "nightly",
   "serde",
@@ -57,8 +57,8 @@ leptos_i18n = { version = "0.3.3", features = [
   "yaml_files",
   "track_locale_files",
 ], default-features = false }
-leptos_meta = { version = "0.6.7", features = ["nightly"] }
-leptos_router = { version = "0.6.7", features = ["nightly"] }
+leptos_meta = { version = "0.6.8", features = ["nightly"] }
+leptos_router = { version = "0.6.8", features = ["nightly"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
 wasm-bindgen = "0.2.91"
@@ -101,6 +101,7 @@ output-name = "app"
 assets-dir = "target/client-prebuild"
 site-addr = "127.0.0.1:3333"
 reload-port = 3334
+hash-files = true
 bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
@@ -118,6 +119,7 @@ lib-package = "client"
 site-root = "target/client-prebuild/pwa"
 site-pkg-dir = ""
 output-name = "app"
+hash-files = true
 bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
