--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,13 @@
     "--stdin",
     "--rustfmt"
   ],
-  "[toml]": {
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer"
+  },
+  "[javascript][typescript][json][jsonc]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[html][toml][yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
