--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "nightly"
-components = ["rustfmt", "clippy"]
+channel = "nightly-2024-03-12"
+components = ["rustfmt", "clippy", "rustc-codegen-cranelift-preview"]
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 profile = "minimal"
