--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -94,8 +94,8 @@ jobs:
       - uses: ./.github/actions/cache
         with:
           preceding-job-id: build
-      - name: Setup Playwright
-        run: npx playwright install --with-deps
+      - name: Setup E2E
+        run: just setup-e2e
       - name: E2E
         run: just e2e
 
